<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="20dp"

   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/omar1"
            android:textAlignment="textStart"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            app:shapeAppearanceOverlay="@style/RoundCorner"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/voteAverage"
            android:layout_width="30dp"
            android:layout_height="23dp"
            android:layout_marginTop="12dp"
            android:text="@string/Rating"
            android:textColor="@color/Green"
            android:textSize="18sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textview1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textview1"
            app:layout_constraintTop_toBottomOf="@+id/textview1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
